servo/tests/compiletest/plugin/compile-fail/trustedpromise_mustnot_deriveclone.rs
#
!
[
feature
(
plugin
)
]
#
!
[
plugin
(
plugins
)
]
extern
crate
script
;
use
script
:
:
test
:
:
TrustedPromise
;
fn
cloneable
<
T
:
Clone
>
(
)
{
}
fn
main
(
)
{
cloneable
:
:
<
TrustedPromise
>
(
)
;
}
